--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     <script src="trakMap/product.js"></script>
     <script src="trakMap/dependency.js"></script>
     <script src="trakMap/productDesc.js"></script>
-
+    <script src="trakMap/dateBubble.js"></script>
     
     <script src="onUnclick.js"></script>
     <script src="util.js"></script>
