Added PriorityGroup class

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <script src="trakMap/dependency.js"></script>
     <script src="trakMap/productDesc.js"></script>
     <script src="trakMap/dateBubble.js"></script>
+    <script src="trakMap/priorityGroup.js"></script>
     
     <script src="onUnclick.js"></script>
     <script src="util.js"></script>
