--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     <script src="trakMap/productDesc.js"></script>
     <script src="trakMap/dateBubble.js"></script>
     <script src="trakMap/priorityGroup.js"></script>
+    <script src="trakMap/priorityGroupDesc.js"></script>
     
     <script src="onUnclick.js"></script>
     <script src="util.js"></script>
