--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
+    <title>TrakMap</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,6 +27,7 @@
     <script src="nodeWeightedGraph.js"></script>
 
     <script src="minHeap.js"></script>
+    <script src="loader.js"></script>
     
     <script src="trakMap.js"></script>
     <script src="trakMap/product.js"></script>
