Begin to implement milestones

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,9 @@
 
     <script src="trakMap/priorityGroup.js"></script>
     <script src="trakMap/product.js"></script>
-    <script src="trakMap.js"></script>
+    <script src="trakMap/milestone.js"></script>
     <script src="trakMap/dependency.js"></script>
+    <script src="trakMap.js"></script>
     <script src="trakMap/productDesc.js"></script>
     <script src="trakMap/dateBubble.js"></script>
     <script src="trakMap/priorityGroupDesc.js"></script>
