--- a/src/index.html
+++ b/src/index.html
@@ -1,53 +1,105 @@
 <!doctype html>
 <html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>TrakMap</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>TrakMap</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
-    <!--[if lte IE 9]>
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+  <!--[if lte IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-    <div id="app"></div>
-    
-    <script src="main.js"></script>
-    <script src="tests.js"></script>
-    <script src="assert.js"></script>
-    
-    <script src="nodeWeightedGraph.js"></script>
+  <div id="app">
+    <div text-align="center">
+      <svg height="300" width="100%" viewBox="-80 -30 600 220 ">
+        <style>
+          .title {
+            font-size: 6em;
+            font-weight: bold;
+          }
 
-    <script src="minHeap.js"></script>
-    <script src="loader.js"></script>
+          .TMBubbles,
+          .priorityGroupBox {
+            stroke-width: 3;
+          }
 
-    <script src="onUnclick.js"></script>
-    <script src="util.js"></script>
+          .priorityLine.slack {
+            stroke-width: 3;
+          }
 
-    <script src="trakMap/priorityGroup.js"></script>
-    <script src="trakMap/product.js"></script>
-    <script src="trakMap/dateBubble.js"></script>
-    <script src="trakMap/milestone.js"></script>
-    <script src="trakMap/dependency.js"></script>
-    <script src="trakMap.js"></script>
-    <script src="trakMap/productDesc.js"></script>
-    <script src="trakMap/priorityGroupDesc.js"></script>
+          .priorityLine.priority-0 {
+            stroke-width: 5;
+          }
+        </style>
+        <line class="priorityLine priority-0" x1="390.36774610288023" y1="120" x2="434.36774610288023" y2="120">
+        </line>
+        <line class="priorityLine priority-0" x1="44" y1="120" x2="390.36774610288023" y2="120"></line>
+        <g class="productData" transform="translate(217.18387305144012, 120)">
+          <text text-anchor="middle" transform="translate(0, -10)" class="title">TrakMap</text>
+        </g>
 
-    <script src="draw.js"></script>  
-    <script src="draw/lines.js"></script>
-    <script src="draw/domUtils.js"></script>
-    <script src="draw/menu.js"></script>
-    <script src="draw/elements.js"></script>
-    <script src="draw/svgTextInput.js"></script>
-    <script src="draw/inputs.js"></script>
-    <script src="draw/svgDateInput.js"></script>
-  </body>
+        <g class="TMBubbles">
+          <path class="priorityLine slack" d="M0 50 C100 110 -56 60 44 120"></path>
+          <rect width="534.3677461028802" height="170" x="-50" y="0" class="priorityGroupBox"></rect>
+          <g class="dateBubble" transform="translate(44, 120)">
+            <circle cx="0" cy="0" r="18" class="dateBubbleCircle on-track"></circle>
+          </g>
+          <g class="milestone" transform="translate(0, 50)">
+            <path d="M -21 0L 0 21L 21 0L 0 -21 Z"></path>
+          </g>
+          <g class="milestone" transform="translate(434.36774610288023, 120)">
+            <path d="M -21 0L 0 21L 21 0L 0 -21 Z"></path>
+          </g>
+        </g>
+      </svg>
+    </div>
+  </div>
+
+  <script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
+  <script type="text/javascript" src="https://js.live.net/v7.2/OneDrive.js"></script>
+
+  <script src="main.js"></script>
+  <script src="tests.js"></script>
+  <script src="assert.js"></script>
+
+  <script src="saveLoad.js"></script>
+
+  <script src="nodeWeightedGraph.js"></script>
+
+  <script src="minHeap.js"></script>
+  <script src="loader.js"></script>
+
+  <script src="onUnclick.js"></script>
+  <script src="util.js"></script>
+
+  <script src="trakMap/priorityGroup.js"></script>
+  <script src="trakMap/product.js"></script>
+  <script src="trakMap/dateBubble.js"></script>
+  <script src="trakMap/milestone.js"></script>
+  <script src="trakMap/dependency.js"></script>
+  <script src="trakMap.js"></script>
+  <script src="trakMap/productDesc.js"></script>
+  <script src="trakMap/priorityGroupDesc.js"></script>
+
+  <script src="draw.js"></script>
+  <script src="draw/lines.js"></script>
+  <script src="draw/domUtils.js"></script>
+  <script src="draw/menu.js"></script>
+  <script src="draw/elements.js"></script>
+  <script src="draw/svgTextInput.js"></script>
+  <script src="draw/inputs.js"></script>
+  <script src="draw/svgDateInput.js"></script>
+</body>
+
 </html>
